--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -3,7 +3,7 @@
 
 <h3 class="light-blue-text text-darken-4 center-align">Tasks</h3>
 
-<div class="row">
+<div class="row">sd
     <div class="col s12 center-align">
         <a href="{{ url_for('add_task') }}" class="btn-large light-blue darken-2">
             Add Task <i class="fas fa-plus-squre right"></i>
@@ -24,13 +24,30 @@
         <div class="collapsible-body">
             <strong>{{ task.category }}</strong>
             <p>{{ task.task_description }}</p>
-            <p>
+            <div class="card-action">
                 <a href="{{ url_for('edit_task', task_id=task.id) }}" class="btn green accent-4">Edit</a>
-                <a href="{{ url_for('delete_task', task_id=task.id) }}" class="btn red">Delete</a>
-            </p>
+                <a href="#modal-{{ task.id }}" class="btn red modal-trigger">Delete</a>
+
+
+                <!-- Modal Structure -->
+                <div id="modal-{{ task.id }}" class="modal">
+                    <div class="modal-content">
+                        <h4>Are you sure you want to delete this category</h4>
+                        <p class="modal-warning">WARNING: this will delete all related tasks !</p>
+                    
+                        <a href="#!" class="modal-close btn red ">NO</a>
+                        <a href="{{ url_for('delete_task', task_id=task.id) }}" class="btn green accent-4">YES</a>
+                        
+                    </div>
+                </div>
+            </div>
+
+
+            
         </div>
     </li>
     {% endfor %}
 </ul>
 
 {% endblock %}
+
